--- a/templates/forget_password/password_reset_confirm.html
+++ b/templates/forget_password/password_reset_confirm.html
@@ -15,9 +15,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="{% static 'loginapp/style.css' %}">
+		<link rel="stylesheet" href="{% static 'login/style.css' %}">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
-		<link rel="stylesheet" href="{% static '/style.css' %}">
+		<link rel="stylesheet" href="{% static 'forgotpass/style.css' %}">
 		<div class="title"> 
 			<div class = "frlspu_bg">
 				<img src="{% static 'forget_password/img/Background.png' %} "class="center" >
@@ -26,45 +26,36 @@
 
 			
 		<div class = "frwhite_bg"></div>
-		<div class="frlogowb"> <img src="{% static 'forget_password/img/Logotitle.png' %}">
+		<div class="frlogowb"> <img src="{% static 'img/Logotitle.png' %}">
 		</div>
 
 		<div class = "forgot_form">
         <form method="POST">
 			
            {% csrf_token %}   
+		   <div class="form-container" >
+			{% for field in form %}<!--name-->
+			<div>
+			<input class="form-field" {{ field }} >
+			{{field.label_tag }}<!--form-->
+
+			</div>
+			{% endfor %}
+		</div>
+
 		   
 		   <main class="form-signin w-100 m-auto">
 			<form>
-				<div class = "lock"> <img src="{% static '/forget_password/img/lock.png' %}"></div>
+				<div class = "lock"> <img src="{% static 'img/unlock.png' %}"></div>
             <div class="create">
-			  <h1 class="h3 mb-3 fw-normal">Create New Password</h1>
-			  <div class="note">
-				<h2>Please enter the email address you’d like your</h2> 
-					<h2>password reset  information sent to. </h2>
+			  <h1>Create New Password</h1>
 			  </div>
-			  
+			  <div class = "frtext">
+			  <h1>New Password:</h1>
+			  <h1>Confirm new password:</h1>
+			</div>			  
 			
-				
-
-			  {% for fields in form %}  
-			  {{ fields.label_tag }}
-			  {{ fields }}
-			  {% endfor %}
-			  	
-			  
-
-			  <div class="frnewform">
-				
-				<input type="password"  placeholder= "New Password" style="font-family:FontAwesome , 'Inter'" required>
-				</div>
-				
-				<div class="frconfirmform">
-				<input type="password" class="form-control" id="floatingPassword" placeholder="Confirm New Password">
-			  </div>
-		  
-			  
-			  <button class="frconfirm_submit" type="submit">Submit</button>
+			  <button class="frconfirm_submit" type="submit">Save Your Password</button>
 			  <div class = "frcredit">@2023 Laguna State Polytechnic University-Developed by Group 3, Inc </div>   
 			</form>
 		  </main>
