--- a/templates/forget_password/password_reset_done.html
+++ b/templates/forget_password/password_reset_done.html
@@ -1,8 +1,55 @@
 
+{% extends "login/base.html" %}
 
-	<!--Password reset sent-->
+	<!--Reset Password-->
+	{% block content %}
+	
+
 	<div class="container p-5">
-  	<h2 class="font-weight-bold mt-3">Password reset sent</h2>
-		<hr>
-		<p>We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
-  </div>
+		{% load static %}
+		<meta charset = "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type = "text/css" href="css/style.css">
+		<link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="{% static 'login/style.css' %}">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
+		<link rel="stylesheet" href="{% static 'forgotpass/style.css' %}">
+		<div class="title"> 
+			<div class = "frlspu_bg">
+				<img src="{% static 'forget_password/img/Background.png' %} "class="center" >
+			</div>
+			
+
+			
+		<div class = "frwhite_bg"></div>
+		<div class="frlogowb"> <img src="{% static 'img/Logotitle.png' %}">
+		</div>
+
+		<div class = "forgot_form">
+        <form method="POST">
+			
+           {% csrf_token %}   
+		    
+		   <main class="form-signin w-100 m-auto">
+			<form>
+				<div class = "envelope"> <img src="{% static 'img/envelope.png' %}"></div>
+			  <div class="note">
+				<h1>Check Your Email</h1> 
+			  </div>
+			  <div class = "notei">
+				<h2>Please check your email. </h2>
+				<h2>We have sent you a link to</h2>
+				<h2>change your password.</h2>
+			  </div>
+
+			  <div class = "frcredit">@2023 Laguna State Polytechnic University-Developed by Group 3, Inc </div>   
+			</form>
+		  </main>
+        </form>
+  	</div> 
+</div>
+{% endblock content %}
