--- a/templates/forget_password/password_reset.html
+++ b/templates/forget_password/password_reset.html
@@ -9,15 +9,15 @@
 		{% load static %}
 		<meta charset = "utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type = "text/css" href="css/style.css">
+		<link rel="stylesheet" type = "text/css" href="style.css">
 		<link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
 		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="{% static 'loginapp/style.css' %}">
+		<link rel="stylesheet" href="{% static 'style.css' %}">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
-		<link rel="stylesheet" href="{% static '/style.css' %}">
+		<link rel="stylesheet" href="{% static 'forgotpass/style.css' %}">
 		<div class="title"> 
 			<div class = "frlspu_bg">
 				<img src="{% static 'forget_password/img/Background.png' %} "class="center" >
@@ -26,7 +26,7 @@
 
 			
 		<div class = "frwhite_bg"></div>
-		<div class="frlogowb"> <img src="{% static 'forget_password/img/Logotitle.png' %}">
+		<div class="frlogowb"> <img src="{% static 'img/Logotitle.png' %}">
 		</div>
 
 		<div class = "forgot_form">
@@ -37,15 +37,15 @@
 		   <main class="form-signin w-100 m-auto">
 			<form>
             <div class="create">
-				<div class = "lock"> <img src="{% static 'forget_password/img/lock.png' %}"></div>
+				<div class = "lock"> <img src="{% static 'img/lock.png' %}"></div>
 			  <h1 class="h3 mb-3 fw-normal">Forgot Password</h1>
-			  <div class="note">
+			  <div class="frnote">
 				<h2>Please enter the email address you’d like your</h2> 
-					<h2>password reset  information sent to. </h2>
+					<h2>password reset information sent to. </h2>
 			  </div>
 		  
-			  <div class="frnewform">
-				<input type="email" class="email" id="email" name="email" placeholder= "Enter Email" style="font-family:FontAwesome , 'Inter'" required>
+			  <div>
+				<input class ="fremail" type="email" name="email" id="email" placeholder= "&#61447; Enter Email" style="font-family:FontAwesome , 'Inter'" required>
 				</div>
 		  
 			  
