--- a/templates/forget_password/password_reset_complete.html
+++ b/templates/forget_password/password_reset_complete.html
@@ -1,8 +1,51 @@
-  <!--Password Reset Complete-->
-    <div class="container p-4">
-	    <h2 class="font-weight-bold mt-3">Password reset complete</h2>
-		<hr>
-        <p>Your password has been set. You may go ahead and log in now.</p>                 
-        <a href="/login" class="btn btn-primary">Log in</a>
-    </div>
 
+{% extends "login/base.html" %}
+
+	<!--Reset Password-->
+	{% block content %}
+	
+
+	<div class="container p-5">
+		{% load static %}
+		<meta charset = "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type = "text/css" href="css/style.css">
+		<link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="{% static 'login/style.css' %}">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
+		<link rel="stylesheet" href="{% static 'forgotpass/style.css' %}">
+		<div class="title"> 
+			<div class = "frlspu_bg">
+				<img src="{% static 'forget_password/img/Background.png' %} "class="center" >
+			</div>
+			
+
+			
+		<div class = "frwhite_bg"></div>
+		<div class="frlogowb"> <img src="{% static 'img/Logotitle.png' %}">
+		</div>
+
+		<div class = "forgot_form">
+        <form method="POST">
+			
+           {% csrf_token %}   
+		    
+		   <main class="form-signin w-100 m-auto">
+			<form>
+				<div class = "check"> <img src="{% static 'img/check.png' %}"></div>
+			  <div class="note">
+				<h1>You may now login</h1> 
+					
+			  </div>
+
+			  <div class = "frcredit">@2023 Laguna State Polytechnic University-Developed by Group 3, Inc </div>   
+			</form>
+		  </main>
+        </form>
+  	</div> 
+</div>
+{% endblock content %}
