--- a/static/downloads/style.css
+++ b/static/downloads/style.css
@@ -884,3 +884,35 @@ a:active {
     border-radius:50px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
+.ipcr_ipmt_form{
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 700;
+    font-size: 16px;
+    position: absolute;
+    width: 172px;
+    height: 42px;
+    position: absolute;
+    left: 30px;
+    top: 100px;
+    background: #7a7979;
+    border-radius: 18px;
+    border : 0px solid;  
+}
+
+.ipcr_form{
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 700;
+    font-size: 16px;
+    position: absolute;
+    width: 172px;
+    height: 42px;
+    position: absolute;
+    left: 30px;
+    top: 100px;
+    background: #7a7979;
+    border-radius: 18px;
+    border : 0px solid;  
+}
