--- a/templates/dashboard/admin_superadmin_dashboard.html
+++ b/templates/dashboard/admin_superadmin_dashboard.html
@@ -27,17 +27,30 @@
     <div class = "home_bg"></div>
     <div class ="logout_bg">
         <button class="logout"><a href="{% url 'logout' %}">Logout</a></button></div>
-<section class ="menu" id="menu">
-	<div class ="menu_home"></div>
-	<button class ="home">Home</div>
-	<button class="home_ipcr"><a href="{% url 'IPCR_Form' %}">IPCR</a></button> 
-	<button class="home_downloads"><a href="{% url 'download' %}">Downloads</a></button>
-	<button class="home_dashboard"><a href = "{% url 'dashboard' %}">Dashboard</a></button>
-	<button class="home_faculty_list"><a href="{% url 'member_faculty_list' %}">Faculty List</a></button>
-	<button class="home_notifications"><a href="{% url 'member_notification' %}">Notifications</a></button>
-	<button class="home_settings"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
-</section>
-
+<!-- W/O Style
+         <section class ="menu" id="menu">
+            <div class ="menu_home_super"><a href="{% url 'admin_faculty_list' %}">Faculty List</a></div>
+            <button class="menu_dashboard_super"><a href = "{% url 'dashboard' %}">Dashboard</a></button>
+            <div class="menu_faculty_list_super"></div>
+            <button class="menu_notifications_super"><a href="{% url 'admin_superadmin_notification' % }">Notifications</a></button>
+            <button class="settings_icon_super"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
+    </section> -->
+    <section class="menu" id="menu">
+        {% if 'Admin_Director' in user_group_names %}
+        <button class="menu_home_admin" style="position: absolute; width: 172px; height: 42px; left: 480px; top: 273px; background-color: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF""><a href="{% url 'admin_home' %}">Home</a></button>
+        {% elif 'Superadmin' in user_group_names %}
+        <button class="menu_home_admin" style="position: absolute; width: 172px; height: 42px; left: 480px; top: 273px; background-color: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF""><a href="{% url 'superadmin_home' %}">Home</a></button>
+        {% endif %}
+        <div class="home_admin" style="position: absolute; width: 139px; height: 20px; left: 710px; top: 285px; font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF;">Dashboard</div>
+        <div class="menu_dashboard_admin" style="position: absolute; width: 172px; height: 42px; left: 696px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF"></div>
+        {% if 'Admin_Director' in user_group_names %}
+		<button class="menu_faculty_list_admin" style="position: absolute; width: 172px; height: 42px; left: 904px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'admin_faculty_list' %}">Faculty List</a></button>
+        {% elif 'Superadmin' in user_group_names %}
+		<button class="menu_faculty_list_admin" style="position: absolute; width: 172px; height: 42px; left: 904px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'superadmin_faculty_list' %}">Faculty List</a></button>
+		{% endif %}
+		<button class="menu_notifications_admin" style="position: absolute; width: 172px; height: 42px; left: 1112px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'admin_superadmin_notification' %} ">Notification</a></button>
+        <button class="settings_icon_super" style="position: absolute; width: 75px; height: 42px; left: 1312px; top: 273px; background: #7d7676; opacity: 0.4; border-radius: 18px;"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
+    </section>
 	<div class="card"></div>
 	<div class="cardii"></div>
 	<div class="cardtext"></div>
