--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -23,7 +23,7 @@
     <div class = "avatar">
         <img src="{% static 'home/img/avatar.png' %} "class="center" ></div>  
     <div class = "acc_name_bg"></div>
-    <div class = "acc_name_placeholder">Account name </div>
+    <div class = "acc_name_placeholder">{{ current_user.get_full_name }}</div>
     <div class = "home_bg"></div>
     <div class ="logout_bg">
         <button class="logout"><a href="{% url 'logout' %}">Logout</a></button></div>
@@ -33,7 +33,7 @@
          <section class ="menu" id="menu">
             <div class ="menu_home_super"></div>
             <div class ="home_super">Home</div>
-            <button class="menu_dashboard_super"><a href = "{% url 'dashboard' %}">Dashboard</a></button>
+            <button class="menu_dashboard_super"><a href = "{% url 'dashboard_admin_superadmin' %}">Dashboard</a></button>
             <button class="menu_faculty_list_super"><a href="{% url 'admin_faculty_list' %}">Faculty List</a></button>
             <button class="menu_notifications_super"><a href="{% url 'admin_superadmin_notification' % }">Notifications</a></button>
             <button class="settings_icon_super"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
