--- a/templates/notification/member_notification.html
+++ b/templates/notification/member_notification.html
@@ -1,23 +1,105 @@
-<h1>notification</h1>
-<button><a href="{% url 'logout' %}">logout</a></button>
-<button><a href="{% url 'IPCR_Form' %}">IPCR_Form</a></button>
-<button><a href="{% url 'download' %}">download</a></button>
-<button><a href="{% url 'member_home' %}">home</a></button>
-<button><a href="{% url 'member_faculty_list' %}">faculty list</a></button>
-<button><a href="{% url 'dashboard' %}">dashboard</a></button>
-<button><a href="{% url 'settings' %}">settings</a></button>
+<html>
+  <head>
+  {% load static %}
+  <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type = "text/css" href="static/notifications/style.css">
+  <link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'notifications/style.css' %}">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
+  <!--DEFAULT DESIGN-->
+  <div class="title"> 
+  <div class = "lspu_bg">
+          <img src="{% static 'home/img/background.png' %} "class="center" >
+      </div>
+  <div class = "white_bg"></div>
+  <div class = "lspu_header"> 
+          <img src="{% static 'home/img/LSPU_header.png' %}"> </div>
+  <div class = "avatar_bg"></div>
+  <div class = "avatar">
+      <img src="{% static 'home/img/avatar.png' %} "class="center" ></div>  
+  <div class = "acc_name_bg"></div>
+  <div class = "acc_name_placeholder">{{user.get_full_name}}</div>
+  <div class ="logout_bg">
+      <button class="logout"><a href="{% url 'logout' %}">Logout</a></button></div>
+  </head>
+
+   <body>
+      <div class = "home_bg">
+    
+
+<section class ="download_menu" id="download_menu">
+    <!-- <div class ="ipcr_home"></div> -->
+         <button class="download_home"><a href="{% url 'member_home' %}">Home</a></button>
+     <!--<div class ="menu_ipcr"> -->
+         <button class="download_ipcr"><a href="{% url 'IPCR_Form' %}">IPCR</a></button> 
+     <!--<div class ="menu_downloads"> -->
+         <button class ="download_download"><a href="{% url 'download' %}">Downloads</a></button>
+     <!--<div class ="menu_dashboard"></div> -->
+         <button class="download_dashboard"><a href = "{% url 'dashboard' %}">Dashboard</a></button>
+     <!--<div class ="menu_faculty_list"></div> -->
+         <button class="download_faculty_list"><a href="{% url 'member_faculty_list' %}">Faculty List</a></button>
+     <!--<div class ="menu_notifications"></div>-->
+        <div class ="download">Notifications</div>
+        <div class="download_notifications"></div>
+     <!--<div class ="menu_settings"></div>-->
+         <button class="download_settings"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
+ </section>
 
 {% for notification in recent_notifications %}
     <div>
-        <h3>Posted by {{ notification.author.get_full_name }}</h3>
-        <p>Date Posted: {{ notification.date_posted }}</p>
-        <p>{{ notification.new_post }}</p>
+        <div class = "notify">Notifications</div>
+        <button type="button" class="collapsible">Posted by {{ notification.author.get_full_name }}</button>
+        <div class="content">
+            <p>Date Posted: {{ notification.date_posted }}</p>
+            <p>{{ notification.new_post }}</p>
     </div>
 {% empty %}
     <p>No notifications found.</p>
 {% endfor %}
 
 {% if current_date <= deadline_date and days_until_deadline <= 15 %}
-    <h2>Deadline Upcoming!!</h2>
+    <div class = "deadlines">Deadlines</div>
+    <button type="button" class="collapsible_2">Deadline Upcoming!!</button>
+    <div class="content">
     <p>The deadline for the IPCR form is approaching within {{ days_until_deadline }} days. The upcoming deadline date is: {{ deadline_date }}</p>
-{% endif %}
+    {% endif %}
+    
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+        
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+        </script>
+        
+    <script>
+        var coll = document.getElementsByClassName("collapsible_2");
+        var i;
+        
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+        </script>
